# srochno-backend

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  FRONTEND_INTEGRATION.md  ISSUES_FIXED.md  MANUAL_BATTLE_TEST.md  Makefile  PROJECT_SUMMARY.md  README.md  STATUS.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  quickstart.sh  requirements.txt
.claude/commands/: release.md  task.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-notify.yml  deploy.yml  rollback.yml
alembic/: env.py
alembic/versions/: 0c7e1efbbe2a_fix_align_payment_invoices_crypto_bot_.py  1b7603ea6473_timestamp_columns_to_timestamptz.py  9b7accc62b32_add_last_notified_at.py  a1f2c3d4e5f6_fix_complaint_reason_values.py  b2c3d4e5f6a7_add_payment_invoices.py  c3d4e5f6a7b8_add_notifications_enabled_to_users.py  cc06b4d0db70_initial_schema.py  e08bf67ee445_update_client_review_unique_constraint.py
app/: main.py
app/api/: balance.py  cities.py  orders.py  reviews.py  users.py
app/core/: config.py  database.py
app/data/: cities.py
app/middleware/: auth.py
app/models/: __init__.py  balance.py  order.py  payment.py  review.py  user.py
app/schemas/: __init__.py  balance.py  order.py  payment.py  review.py  user.py
app/services/: balance_service.py  crypto_payment_service.py  notification_service.py  order_service.py  review_service.py
app/utils/: timer.py
